<resources>
    <string name="app_name">Food App PRM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_daily_meal">Daily Meal</string>
    <string name="menu_favorite">Favorite</string>
    <string name="food_delivery_app">Food Delivery App</string>
    <string name="hello_explore_your_food">Hello Explore Your Food.</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="register_page">Register Page</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="all_ready_registered">All ready registered ?</string>
    <string name="sign_in_page">Sign In Page</string>
    <string name="dont_have_an_account">Dont have an account ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="duongduy203_st_gmail_com">duongduy203.st@gmail.com</string>
    <string name="duong_duy">Duong Duy</string>
    <string name="search_your_food">Search your food</string>
    <string name="menu_product_list">Product List</string>
    <string name="price_format">$%.2f</string>
    <string name="rating_format">Rating: %.1f</string>
    <string name="all_categories">All Categories</string>
    <string name="error_loading_categories">Error loading categories: %1$s</string>
    <string name="error_loading_products">Error loading products: %1$s</string>
    <string name="in_stock">In Stock</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="todo">todo</string>
    <string name="description_here">description_here</string>
    <string name="food_name">food_name</string>
    <string name="view_more">view_more</string>
    <string name="your_favourite_and_testy_food_is_here">your favourite and testy food is here</string>
    <string name="suggest_favourite">Suggest favourite</string>
    <string name="my_favourite">My Favourite</string>
    <string name="let_make_your_day_nsweet_and_delicious_food">Let make your day \nsweet and delicious food</string>
    <string name="y_u_th_ch">Yêu thích</string>
</resources>