<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foodappprm.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_meal"
        android:name="com.example.foodappprm.ui.gallery.DailyMealFragment"
        android:label="@string/menu_daily_meal"
        tools:layout="@layout/fragment_daily_meal" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.foodappprm.ui.slideshow.FavoriteFragment"
        android:label="@string/menu_daily_meal"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.example.foodappprm.ui.mycart.MyCartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" />

    <fragment
        android:id="@+id/nav_product_list"
        android:name="com.example.foodappprm.ui.productlist.ProductListFragment"
        android:label="Products"
        tools:layout="@layout/fragment_product_list">
        <action
            android:id="@+id/action_nav_product_list_to_nav_product_detail"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.foodappprm.ui.productdetail.ProductDetailFragment"
        android:label="Product Detail"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="productId"
            app:argType="string" />
    </fragment>
</navigation>